[gd_scene load_steps=8 format=3 uid="uid://y7an52y8ptjs"]

[ext_resource type="Script" uid="uid://ncrcqlhjvykp" path="res://scripts/start/start.gd" id="1_stwfd"]
[ext_resource type="Texture2D" uid="uid://calyit8d3nwql" path="res://assets/gui/launchJp-logo.png" id="2_0stv2"]
[ext_resource type="Texture2D" uid="uid://2vg11lstn1gt" path="res://assets/gui/button/start_btn_idle.png" id="3_eqbev"]
[ext_resource type="Texture2D" uid="uid://djjxlwg3pjhpq" path="res://assets/gui/button/start_btn_hover.png" id="4_pmgyj"]
[ext_resource type="Script" uid="uid://65yhmrpr52uu" path="res://scripts/start/start_button.gd" id="5_0stv2"]
[ext_resource type="FontFile" uid="uid://bajyd14et5o6v" path="res://assets/gui/font/方正兰亭准黑_GBK.ttf" id="5_3xo6f"]

[sub_resource type="LabelSettings" id="LabelSettings_y16t7"]
font = ExtResource("5_3xo6f")
font_size = 30
font_color = Color(0.180392, 0.196078, 0.219608, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_stwfd")

[node name="BlackBackground" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
color = Color(0, 0, 0, 1)

[node name="LaunchLogo" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.95952, 0.96)
texture = ExtResource("2_0stv2")

[node name="LoadingBg" type="Sprite2D" parent="."]
position = Vector2(640, 360)
scale = Vector2(0.95952, 0.96)

[node name="StartButton" type="TextureButton" parent="."]
z_index = -1
layout_mode = 0
offset_left = 502.0
offset_top = 627.0
offset_right = 778.0
offset_bottom = 690.0
texture_normal = ExtResource("3_eqbev")
texture_hover = ExtResource("4_pmgyj")
script = ExtResource("5_0stv2")

[node name="StartButtonText" type="Label" parent="StartButton"]
layout_mode = 0
offset_left = 78.0
offset_top = 16.0
offset_right = 198.0
offset_bottom = 53.0
text = "进入游戏"
label_settings = SubResource("LabelSettings_y16t7")

[connection signal="pressed" from="StartButton" to="StartButton" method="_on_pressed"]
